Bug 259820 - REGRESSION(266544@main): Broke linux clang builds
Summary: REGRESSION(266544@main): Broke linux clang builds
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Philippe Normand
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-04 02:52 PDT by Philippe Normand
Modified: 2023-08-04 03:10 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe Normand 2023-08-04 02:52:56 PDT
GraphicsContextCairo.cpp:276:31: error: no matching constructor for initialization of 'WebCore::GraphicsDropShadow'                                               
            m_state.m_style = GraphicsDropShadow({ dropShadow->offset.width(), -dropShadow->offset.height() }, dropShadow->radius, dropShadow->color, dropShadow->radiusMode);                                       
                              ^                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                                         
/app/webkit/Source/WebCore/platform/graphics/GraphicsStyle.h:45:8: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 4 were provided                                  
struct GraphicsDropShadow {                                                                                                                                                                                          
       ^                                                                                                                                                                                                             
/app/webkit/Source/WebCore/platform/graphics/GraphicsStyle.h:45:8: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 4 were provided                                  
/app/webkit/Source/WebCore/platform/graphics/GraphicsStyle.h:45:8: note: candidate constructor (the implicit default constructor) not viable: requires 0 arguments, but 4 were provided                              
1 error generated.
Comment 1 Philippe Normand 2023-08-04 03:04:58 PDT
Pull request: https://github.com/WebKit/WebKit/pull/16387
Comment 2 EWS 2023-08-04 03:10:07 PDT
Committed 266575@main (1f2aba4ba49c): <https://commits.webkit.org/266575@main>

Reviewed commits have been landed. Closing PR #16387 and removing active labels.