REGRESSION(266544@main): Broke linux clang builds https://bugs.webkit.org/show_bug.cgi?id=259820

Unreviewed, fix the GraphicsDropShadow initialization, the struct has no explicit constructor
accepting 4 parameters.

* Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp:
(WebCore::GraphicsContextCairo::didUpdateState):

Canonical link: https://commits.webkit.org/266575@main